fix dialog display on mobile with keyboard

--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -9,6 +9,11 @@ $logosize: 1650;
   display: none !important;
 }
 
+.dialog-body {
+  max-height: 100% !important;
+  overflow: scroll !important;
+}
+
 @media only screen and (min-width: 769px) {
   /* styles for browsers larger than 788px (larger than ipad resolution, standard version); */
   .main-container {
